--- a/09.XGBoost Classifier.ipynb
+++ b/09.XGBoost Classifier.ipynb
@@ -226,7 +226,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(r\"C:\\Users\\devad\\Downloads\\Wholesale customers data.csv\")\n",
+    "data = pd.read_csv(r\"C:\\Users\\Shaik Sakhlaih\\Downloads\\Wholesale customers data.csv\")\n",
     "data"
    ]
   },
