--- a/Wholesale Customers Data - XGBoost Classifier Report.ipynb
+++ b/Wholesale Customers Data - XGBoost Classifier Report.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r\"C:\\Users\\devad\\Downloads\\Wholesale customers data.csv\")"
+    "data = pd.read_csv(r\"C:\\Users\\Shaik Sakhlaih\\Downloads\\Wholesale customers data.csv\")"
    ]
   },
   {
